[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ltprotocol"
version = "0.1.0"  # Replace with the appropriate version of your project
description = "ltprotocol adapted for python3"
authors = [{name = "Efe Akinci", email = "efea@umich.edu"}]
readme = "README.md"
requires-python = ">=3.6"

# Optional: List runtime dependencies here
dependencies = [
    "twisted"
]